--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aplicación Web que permite encriptar y desencriptar texto de forma muy básica."/>
+    <meta name="keywords" content="encriptador, encriptar, desencriptar, desencriptador"/>
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" media="(prefers-color-scheme: light)" href="./styles/light.css"/>
