Se agregó el enlace a la cuenta de GitHub

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <span class="bold">Autor:</span><pre> </pre><span> Carlos Daniel Conchas Ortíz</span><pre id="divider"></pre><span class="bold">Contacto:</span><pre> </pre><span> carlosdanielconchasortiz@gmail.com</span>
         <div id="social-media-info">
           <a href="https://www.linkedin.com/in/carlosdanielconchasortiz/" target="_blank" id="LinkedIn-link"><div id="LinkedIn" class="social-media"><img src="./res/LinkedInWeb.png" alt="LinkedIn logo"></div></a>
-          <a href="https://twitter.com/carlosprog2022" target="_blank" id="Twitter-link"><div id="Twitter" class="social-media"><img src="./res/TwitterWeb.png" alt="Twitter logo"></div></a>
-          <a href="#" target="_blank" id="GitHub-link"><div id="GitHub" class="social-media"><img src="./res/GitHubWeb.png" alt="GitHub logo"></div></a>
+          <a href="https://twitter.com/carlosprog2022/" target="_blank" id="Twitter-link"><div id="Twitter" class="social-media"><img src="./res/TwitterWeb.png" alt="Twitter logo"></div></a>
+          <a href="https://github.com/CarlosDaniel2022/" target="_blank" id="GitHub-link"><div id="GitHub" class="social-media"><img src="./res/GitHubWeb.png" alt="GitHub logo"></div></a>
         </div>
     </footer>
 
