Mejoras en el funcionamiento de la página Web

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:image" content="./res/Logo@2x.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Aplicación Web que permite encriptar y desencriptar texto de forma muy básica."/>
     <meta name="keywords" content="encriptador, encriptar, desencriptar, desencriptador"/>
